--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="div1">
     <header>
-        
+        <h1 class="header">FridayTokyo</h1>
     </header>
-    
+    </div>
 </body>
-</html>
+</html> 
