--- a/index.html
+++ b/index.html
@@ -12,5 +12,23 @@
         <h1 class="header">FridayTokyo</h1>
     </header>
     </div>
+   
+<div class="logo">
+    <img
+    src="friday logo.jpg"
+    alt="Friday's profile picture. Comic book image of Spiderman."
+    width="250"
+    height="250"
+    />
+    <h2>Who is Friday?</h2>
+    </div>
+    
+    <div class="description">
+    <pre>
+    Friday Tokyo is a producer/rapper from planet Vegeta. 
+    He specializes in mixing Hip Hop and R&B hits into mashups.
+    He also likes to incorporate Soulful music into his catalogue.
+ </pre>
+</div>
 </body>
 </html> 
