Added some songs. Flexbox is a pain.

--- a/index.html
+++ b/index.html
@@ -10,25 +10,53 @@
     <div class="div1">
     <header>
         <h1 class="header">FridayTokyo</h1>
+        <nav></nav>
     </header>
     </div>
-   
-<div class="logo">
+
+    <div class="all-alone">
+    <div class="songs" id="1">
+        <p>All alone</p>
+    <audio controls>
+        <source src="all-alone.mp3">
+    </audio>
+    </div>
+    <div class="songs" id="2">
+        <p>Call me in the rain</p>
+        <audio controls>
+            <source src="calling-me-in-the-rain.mp3">
+        </audio>
+    </div>
+    <div class="songs" id="3">
+        <p>Cole's interlude</p>
+        <audio controls>
+            <source src="cole-s-interlude.mp3">
+        </audio>
+    </div>   
+    </div>
+
+   <main class="logo">
+    <div>
+    <h2 class="sub-heading"> Who is Friday?</h2>
     <img
     src="friday logo.jpg"
     alt="Friday's profile picture. Comic book image of Spiderman."
     width="250"
     height="250"
     />
-    <h2>Who is Friday?</h2>
     </div>
     
-    <div class="description">
-    <pre>
-    Friday Tokyo is a producer/rapper from planet Vegeta. 
-    He specializes in mixing Hip Hop and R&B hits into mashups.
-    He also likes to incorporate Soulful music into his catalogue.
+ <div class="description">
+ <pre>
+ Friday Tokyo is a producer/rapper from planet Vegeta. 
+ He specializes in mixing Hip Hop and R&B hits into mashups.
+ He also likes to incorporate Soulful music into his catalogue.
  </pre>
 </div>
+   </main>
+   <!-- <footer>
+        <h3>FridayTokyo's SoundCloud -</h3>
+</footer> For some reason the footer was showing up on top left-->
 </body>
+
 </html> 
